<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_50"
        android:background="@color/mainbg"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/space_5"
            android:paddingRight="@dimen/space_5"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tv_del_all"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/space_10"
            android:paddingRight="@dimen/space_10"
            android:text="@string/del_all"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold" />
    </LinearLayout>


    <ListView
        android:id="@+id/list_item"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"></ListView>


    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_bg2"
        android:clickable="true"
        android:gravity="center"
        android:padding="@dimen/space_15"
        android:text="@string/cancel"
        android:textSize="@dimen/text_size_16" />

</LinearLayout>