<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_one"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom|center"
        android:layout_weight="1"
        android:gravity="bottom|center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/space_20"
            android:paddingTop="@dimen/space_20"
            android:text="@string/app_name"
            android:textColor="@color/mainbg"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/space_5"
            android:text="@string/slogen"
            android:textColor="@color/text_666"
            android:textSize="@dimen/text_size_19" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom|center"
        android:layout_weight="1"
        android:gravity="bottom|center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/space_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/space_5"
            android:text="@string/copyright"
            android:textColor="@color/text_666"
            android:textSize="@dimen/text_size_15" />
    </LinearLayout>

</LinearLayout>