<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/iv_ads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:src="@drawable/icon_loading_rect" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="@dimen/space_10">

        <TextView
            android:id="@+id/tv_ads_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/app_name"
            android:textColor="@color/text_333"
            android:textSize="@dimen/text_size_15" />

        <TextView
            android:id="@+id/tv_ads_sub_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/slogen"
            android:textColor="@color/text_666"
            android:textSize="@dimen/text_size_13" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="right">

            <TextView
                android:id="@+id/tv_ads_mark"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/ads"
                android:textColor="@color/text_999"
                android:textSize="@dimen/text_size_10" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>