<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text_eee"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/top_layout" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="@dimen/space_10">

                <EditText
                    android:id="@+id/et_contact"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="top"
                    android:hint="@string/contact_mes"
                    android:maxLength="30"
                    android:padding="@dimen/space_10"
                    android:textColorHint="@color/text_999" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_10"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="@dimen/space_10">


                <EditText
                    android:id="@+id/et_content"
                    android:layout_width="fill_parent"
                    android:layout_height="200dp"
                    android:background="@null"
                    android:ems="10"
                    android:gravity="top"
                    android:hint="@string/sub_feedback"
                    android:inputType="textMultiLine"
                    android:maxLength="300"
                    android:padding="@dimen/space_10"
                    android:textColorHint="@color/text_999" />

                <TextView
                    android:id="@+id/tvError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="还能输入300个" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_device"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_10"
                android:background="@color/white"
                android:padding="@dimen/space_10"
                android:text="@string/device"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_3"
                android:layout_marginTop="@dimen/space_10"
                android:paddingLeft="@dimen/space_10"
                android:text="@string/qq_mes" />

            <LinearLayout
                android:id="@+id/ll_qq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal"
                android:padding="@dimen/space_10">

                <TextView
                    android:drawablePadding="@dimen/space_10"
                    android:id="@+id/tv_qq"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/qq"
                    android:gravity="center_vertical" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
