<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/space_10">


    <TextView
        android:id="@+id/tv_wifi_ssid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/space_10"
        android:paddingTop="@dimen/space_10"
        android:text="appledMac-mini"
        android:textColor="@color/mainbg"
        android:textSize="@dimen/text_size_20"
        android:textStyle="bold" />

    <TextView
        android:visibility="gone"
        android:id="@+id/tv_mes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/space_5"
        android:paddingTop="@dimen/space_5"
        android:text="@string/pwd_is_wrong"
        android:textColor="@color/red"
        android:textSize="@dimen/text_size_18" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="0dp"
            android:layout_height="@dimen/space_40"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:inputType="textPassword"
            android:padding="@dimen/space_5"
            android:textSize="@dimen/text_size_16" />


        <ImageView
            android:id="@+id/iv_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/icon_pwd_show" />

    </LinearLayout>


    <View
        android:id="@+id/v_line"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/space_0_5"
        android:background="@color/main_bg5" />


    <LinearLayout
        android:id="@+id/ll_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_20"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="@dimen/space_40"
            android:layout_weight="1"
            android:background="@drawable/shape_selector_r5_p10_gray"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/text_666" />

        <View
            android:layout_width="@dimen/space_10"
            android:layout_height="@dimen/space_1" />

        <LinearLayout
            android:id="@+id/ll_connect"
            android:layout_width="0dp"
            android:layout_height="@dimen/space_40"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/shape_selector_r5_p10_gray"
            android:gravity="center"

            >

            <ProgressBar
                android:id="@+id/progress_loading"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="@dimen/space_23"
                android:layout_height="@dimen/space_23"
                android:indeterminateDrawable="@anim/ca_loading"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="@dimen/space_5"
                android:text="@string/connect2"
                android:textColor="@color/text_666" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>